--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Library</title>
 </head>
 <body>
+    <header>
+        <h1>Library</h1>
+        <ul>
+            <li><button>New Book</button></li>
+        </ul>
+    </header>
     
-
     <script src="main.js"></script>
 </body>
 </html>
