--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>Library</title>
 </head>
 <body>
-    <header>
-        <h1>Library</h1>
-        <ul>
-            <li><button>New Book</button></li>
-        </ul>
-    </header>
+    <div class="main">
+        <header>
+            <h1>Library</h1>
+            <ul>
+                <li><button id="add">New Book</button></li>
+            </ul>
+        </header>
+    </div>
     
     <script src="main.js"></script>
 </body>
