--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <input type="number" id="pages" min="0">
         </div>
 
-        <button type="submit">Add Book</button>
+        <button id="add">Add Book</button>
+
+        <div class="books"></div>
     </div>
     
     <script src="main.js"></script>
